fix #132 : scroll bars were always visible on win

--- a/src/components/explorer/content/style.scss
+++ b/src/components/explorer/content/style.scss
@@ -25,7 +25,7 @@
 
     .body .content {
         flex-direction: column;
-        overflow: scroll;
+        overflow: auto;
     }
 
     .body .divider {
