--- a/src/layouts/default/view/style.scss
+++ b/src/layouts/default/view/style.scss
@@ -39,7 +39,7 @@
     min-height: 0;
 
     &>.content {
-        overflow: scroll;
+        overflow: auto;
     }
 
     &>.divider {
